--- a/css/home.css
+++ b/css/home.css
@@ -213,6 +213,11 @@ h2 {
     visibility:visible;
 }
 
+.hideCommentBtn{
+    visibility: hidden;
+    
+}
+
 .commentBlock{
     visibility: hidden;
 }
