--- a/templates/home.html
+++ b/templates/home.html
@@ -261,6 +261,7 @@
         </script>
 </body>
 <!-- this script runs register/login/chat modal -->
+<script src="/js/comments.js"></script>
 <script src="/js/post.js"></script>
 <script src="/js/register.js"></script>
 <script src="/js/login.js"></script>
