--- a/templates/home.html
+++ b/templates/home.html
@@ -19,7 +19,8 @@
         <a id ="post" href = "/posts" class="nav__link" data-link>Posts</a>
         <a id="profile" href = "/profile" class="nav__link" data-link>Profile</a>    
         <a id="logout" onclick="DeleteSession() ;" href = "/" class="nav__link" style="display:none" data-link>LogOut</a>    
-
+        <div id="userProfile"> 
+        </div>
     </nav>
 
     <nav class="chat">
