--- a/css/home.css
+++ b/css/home.css
@@ -1,12 +1,13 @@
 body {
     background-image: url("/css/img/canvas.png");
     background-size: 110%;
-    --nav-width: 200px;
-    --chat-width:200px;
+    --nav-width: 20%;
+    --chat-width:20%;
     margin: 0 0 0 var(--nav-width);
     margin: 0 0 0 var(--chat-width);
     font-family: cursive;
     font-size: 18px;
+    overflow: hidden;
 }
 
 .nav {
@@ -50,6 +51,9 @@ a {
     background-position: center;
     font-family: cursive;
     font-size: 2rem;
+    overflow-x: hidden;
+
+
 }
 
 .chat__link {
@@ -65,8 +69,9 @@ a {
     color: black;
 }
 
+
 #Header {
-    margin-left: 6.7cm;
+    margin-left: 3.8cm;
     color: whitesmoke;
     font-size: 3rem;
     font-family:cursive;
@@ -75,19 +80,21 @@ a {
 
 .modal {
     display: none;
-    margin-left: 1.5cm;
+    margin-left: .5cm;
     position: flex;
     z-index: 1;
     overflow: none;
     padding-top: 10px;
-
+    overflow: hidden;
+    padding-left: 0;
+    overflow: hidden;
 }
 
 .modal-content {
     margin-top: .25cm;
     border-radius: 25px;
     box-shadow: 2px 2px 2px 2px white;
-    margin-left: 1.5cm;
+    margin-left: .5cm;
     margin-right: 10cm;
    background-image:url("/css/img/canvas.png");
    background-size: 100%;
@@ -96,6 +103,11 @@ a {
    font-weight: bold;
    font-family: cursive;
    margin-bottom: .25cm;
+   overflow: hidden;
+   padding-right: 1cm;
+   padding-left: 0cm;
+   overflow: hidden;
+   
 }
 
 
@@ -134,17 +146,17 @@ h2 {
 
 #happyFace {
     margin-bottom: 0;
-    padding-left: 6.2cm;
+    padding-left: 5cm;
 }
 
 #byeFace {
     margin-bottom: 0;
-    padding-left: 6.2cm;
+    padding-left: 5cm;
 }
 
 #profilePic {
     margin-bottom: 0;
-    padding-left: 10cm;
+    padding-left: 5cm;
 }
 
 h6 {
@@ -158,7 +170,7 @@ h6 {
     padding-top: .75cm;
     padding-left: 1cm;
     padding-right: 1cm;
-    margin-left: 5cm;
+    margin-left: 2cm;
     margin-right: 5cm;
     margin-bottom: 2cm;
     color:whitesmoke;
@@ -171,8 +183,26 @@ h6 {
     box-shadow: 2px 2px 2px 2px white;
 }
 
+.post-content{
+    text-align: justify;
+    height: 5%;
+    margin: 1% auto;
+}
+
+.comment-content{
+    height: 15px;
+}
+
+.comment{
+    color: aqua;
+    font-size: 1.5rem;
+    font-family: cursive;
+    height: 5%;
+    width: 200px;
+}
+
 .container {
-    margin-right: 7cm;
+    margin-right: 4cm;
     padding-left: 320px;
     padding-right: 2cm;
     padding-bottom: .01cm;
@@ -220,33 +250,32 @@ h6 {
   font-weight: bolder;
 }
 
-
-.button1{
-    display: inline-block;
-    background-image: url('/css/img/canvas.png');
-    background-size: 105%;
-    background-repeat: no-repeat;
-    margin-top: .20cm;
-    margin-bottom: .20cm;
-    margin-left: .1cm;
-    border-radius: 25px;
-    box-shadow: 1px 1px 1px 1px white;
-    border-color: white;
-    color: whitesmoke;
-    font-size: 1rem;
-    font-family:cursive;
-    font-weight: bolder;
-    width: 45%;
-
+.postBtn{
+    visibility: hidden;
 }
 
-
-.button1:hover{
-  background-image: none;
-  background-color: rgb(136, 200, 176);
-  color: rgb(15, 15, 120);
-  font-weight: bolder;
+.commentBtn{
+    visibility: visible;
 }
+
+.HideComment{
+    visibility: hidden;
+}
+
+.commentBlock{
+    height: 200px;
+    overflow: auto;
+    display: none;
+    z-index: 1;
+    background-color:cornflowerblue;
+    border-radius: 30px;
+}
+
+.comment-container p{
+    display: inline;
+    height: 150px;
+}
+
 
 
 #regConfirmed {
@@ -254,7 +283,7 @@ h6 {
     align-items: center;
     border-radius: 25px;
     box-shadow: 2px 2px 2px 2px white;
-    margin-left: 10cm;
+    margin-left: 7cm;
     margin-right: 10cm;
     background-color: rgb(0, 143, 0);
     background-size: 100%;
@@ -273,7 +302,7 @@ h6 {
     margin-top: .25cm;
     border-radius: 25px;
     box-shadow: 2px 2px 2px 2px white;
-    margin-left: 10cm;
+    margin-left: 7cm;
     margin-right: 10cm;
     background-color: rgb(191, 23, 8);
     background-size: 100%;
@@ -292,7 +321,7 @@ h6 {
     margin-top: .05cm;
     border-radius: 25px;
     box-shadow: 2px 2px 2px 2px white;
-    margin-left: 10cm;
+    margin-left: 7cm;
     margin-right: 10cm;
     background-color: rgb(0, 143, 0);
     background-size: 100%;
@@ -311,7 +340,7 @@ h6 {
     margin-top: .05cm;
     border-radius: 25px;
     box-shadow: 2px 2px 2px 2px white;
-    margin-left: 10cm;
+    margin-left: 7cm;
     margin-right: 10cm;
     background-color: rgb(0, 143, 0);
     background-size: 100%;
@@ -330,4 +359,79 @@ h6 {
     align-items: center;
 }
 
+/* css for chat */
+#log {
+    margin: 0;
+    padding: 0.5em 0.5em 0.5em 0.5em;
+    position: absolute;
+    top: 2em;
+    left: 0.5em;
+    right: 0.5em;
+    bottom: 3em;
+    overflow: auto;
+}
 
+#formChat {
+    padding: 0 0.5em 0 0.5em;
+    color: #af385c;
+    margin: 0;
+    position: absolute;
+    bottom: 1em;
+    left: 0px;
+    width: 100%;
+    overflow: hidden;
+    visibility:hidden;
+}
+
+#msg{
+    color: blue;
+    background-color: #8EC3B0;
+    border-color: #8EC3B0;
+}
+
+#msg:focus{
+    background-color: #12720e;
+    border-color: #CDF0EA;
+    border-color: #F999B7;
+}
+
+#messenger {
+    font-style: cursive;
+    color: rgb(232, 237, 237);
+    font-size: 1.8rem;
+    padding-top: .5cm;
+    margin-left: .5cm;
+
+}
+
+/* end of chat css */
+
+/* css for loggedin Users */
+#Users {
+    color: rgb(243, 247, 247);
+    font-size: 1.6rem;
+    margin-left: 2.3cm;
+
+}
+
+#Online {
+    color: greenyellow;
+    font-size: 1.6rem;
+    margin-left: 2cm;
+
+}
+
+#Offline {
+    color: red;
+    font-size: 1.6rem;
+    margin-left: 1.8cm;
+
+}
+/* end of logged in user */
+
+#welcomemsg{
+text-shadow: 0.5cm;
+text-indent: 50px;
+text-align: justify;
+color: aqua;
+}
